--- a/explorations/am-fine.qmd
+++ b/explorations/am-fine.qmd
@@ -1,15 +1,13 @@
 ---
 description: "Downscale AquaMaps from 1/2º to GEBCO 1/240º using Google Earth Engine and Shiny."
-image: "../figures/experiments/aquamaps-downscaled.png"
+image: "../figures/explorations/aquamaps-downscaled.png"
 url: "https://shiny.marinebon.app/am-fine/"
 url-code: "https://github.com/marinebon/aquamaps-downscaled/tree/main/sp-map"
-format: 
-  html: 
-    toc: true
 categories: 
    - "data: AquaMaps"
    - "tech: Google Earth Engine"
    - "tech: Shiny"
+editor: source   
 ---
 
 # AquaMaps Downscaled {.unnumbered}
@@ -27,9 +25,8 @@ url_code <- metadata[["url-code"]]
 
 `r descr`
 
-- [{{< fa globe >}} website](`r url_web`)
+-   [{{< fa globe >}} website](`r url_web`)
 
-- [{{< fa brands github >}} `code`](`r url_code`)
+-   [{{< fa brands github >}} `code`](`r url_code`)
 
 ![](`r img`)
-
