--- a/create.qmd
+++ b/create.qmd
@@ -5,3 +5,48 @@
 %%| fig-cap: "Diagram of SDM data preparation and model fitting."
 %%| file: diagrams/sdm-process.mmd
 ```
+
+# Prepare Data
+
+```{mermaid}
+%%| label: fig-prep
+%%| fig-cap: "Diagram of SDM data preparation for model fitting."
+%%| file: diagrams/sdm-prep.mmd
+```
+
+-   **obs\
+    **observations: occurrences from OBIS; masked by FAO regions defined by AquaMaps [@aquamapsdata]
+    -   **presence**\
+        OBIS: species occurrence
+    -   **absence**\
+        OBIS not-species, but same family
+-   **env\
+    **environment
+-   **tbl**\
+    table of observations (presence and absence) with environmental values
+
+## Environmental Predictors
+
+### Physiographic
+
+-   `depth`\
+    Bathymetric Depth
+
+-   `d2coast`\
+    Distance to Coast
+
+-   `d2shelf`\
+    Distance to Shelf
+
+### Time Varying
+
+-   `vgpm`\
+    Vertically integrated primary Productivity model
+
+### Depth & Time Varying
+
+-   `temp`\
+    Temperature, either sea-surface temperature (SST) or some modeled product from HyCOM, ROMS or Copernicus
+
+-   `salin`\
+    Salinity
