--- a/model.qmd
+++ b/model.qmd
@@ -1,8 +1,10 @@
-# Model
+---
+title: "Model"
+subtitle: "Model the distribution of a species"
+---
 
 ```{mermaid}
 %%| label: fig-model
 %%| fig-cap: "Diagram of SDM Modeling processes."
 %%| file: diagrams/sdm-model.mmd
 ```
-
