--- a/references.bib
+++ b/references.bib
@@ -222,3 +222,73 @@
 	url = {https://www.jstor.org/stable/43924357},
 	note = {Publisher: Oceanography Society}
 }
+
+@article{barbet-massin2012,
+	title = {Selecting pseudo-absences for species distribution models: how, where and how many?},
+	author = {Barbet-Massin, Morgane and Jiguet, {Frédéric} and Albert, {Cécile Hélène} and Thuiller, Wilfried},
+	year = {2012},
+	date = {2012},
+	journal = {Methods in Ecology and Evolution},
+	pages = {327--338},
+	volume = {3},
+	number = {2},
+	doi = {10.1111/j.2041-210X.2011.00172.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.2041-210X.2011.00172.x},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.2041-210X.2011.00172.x},
+	langid = {en}
+}
+
+@article{phillips2017,
+	title = {Opening the black box: an open-source release of Maxent},
+	author = {Phillips, Steven J. and Anderson, Robert P. and {Dudík}, Miroslav and Schapire, Robert E. and Blair, Mary E.},
+	year = {2017},
+	date = {2017},
+	journal = {Ecography},
+	pages = {887--893},
+	volume = {40},
+	number = {7},
+	doi = {10.1111/ecog.03049},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.03049},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.03049},
+	langid = {en}
+}
+
+@article{phillips2006,
+	title = {Maximum entropy modeling of species geographic distributions},
+	author = {Phillips, Steven J. and Anderson, Robert P. and Schapire, Robert E.},
+	year = {2006},
+	month = {01},
+	date = {2006-01-25},
+	journal = {Ecological Modelling},
+	pages = {231--259},
+	volume = {190},
+	number = {3},
+	doi = {10.1016/j.ecolmodel.2005.03.026},
+	url = {https://www.sciencedirect.com/science/article/pii/S030438000500267X}
+}
+
+@article{phillips2008,
+	title = {Modeling of species distributions with Maxent: new extensions and a comprehensive evaluation},
+	author = {Phillips, Steven J. and {Dudík}, Miroslav},
+	year = {2008},
+	date = {2008},
+	journal = {Ecography},
+	pages = {161--175},
+	volume = {31},
+	number = {2},
+	doi = {10.1111/j.0906-7590.2008.5203.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.0906-7590.2008.5203.x},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.0906-7590.2008.5203.x},
+	langid = {en}
+}
+
+@article{akaike1974,
+	title = {A new look at the statistical model identification},
+	author = {Akaike, H.},
+	year = {1974},
+	date = {1974},
+	journal = {IEEE transactions on automatic control},
+	pages = {716{\textendash}723},
+	volume = {19},
+	number = {6}
+}
