--- a/taxa.qmd
+++ b/taxa.qmd
@@ -1,5 +1,6 @@
 ---
-title: "Group Taxa"
+title: "Taxa"
+subtitle: "Group SDMs by taxanomy"
 ---
 
 Taxonomic groups [@tittensor2010] in the high seas [@visalli2020] were packaged with simple query statements in the draft R package [`gmbi`](https://marinebon.github.io/gmbi/articles/calc.html#assign-taxonomic-groups) (global marine biodiversity indicators).
