--- a/evaluate.qmd
+++ b/evaluate.qmd
@@ -1,4 +1,7 @@
-# Evaluate
+---
+title: "Evaluate"
+subtitle: "Evaluate performance of the predicted model with the test data"
+---
 
 Model evaluation uses the set aside test data from the earlier splitting to evaluate how well the model predicts the response of presence or absence. Since the test response data is binary \[0,1\] and the prediction from the model is continuous \[0-1\], a threshold needs to be applied to assign to convert the continuous response to binary. This is often performed through a Receiver Operator Characteristic (**ROC**) curve (@fig-rocr), which evaluates at each threshold the **confusion matrix** (@tbl-confusion-matrix).
 
