--- a/split.qmd
+++ b/split.qmd
@@ -1,6 +1,8 @@
-# Split
+---
+title: "Split"
+subtitle: "Split data into training (to fit) and test (to evaluate prediction)"
+---
 
 Data is often split so that \~20% of the observations (presence and absence) are set aside from the model fitting to be used for model evaluation.
 
 The `k-fold` function is often used to split the data into k groups, and then the model is fit k times, each time using a different group as the test data and the remaining groups as the training data.
-
