--- a/references.bib
+++ b/references.bib
@@ -292,3 +292,48 @@
 	volume = {19},
 	number = {6}
 }
+
+@article{araújo2019,
+	title = {Standards for distribution models in biodiversity assessments},
+	author = {{Araújo}, Miguel B. and Anderson, Robert P. and {Márcia Barbosa}, A. and Beale, Colin M. and Dormann, Carsten F. and Early, Regan and Garcia, Raquel A. and Guisan, Antoine and Maiorano, Luigi and Naimi, Babak and {O{\textquoteright}Hara}, Robert B. and Zimmermann, Niklaus E. and Rahbek, Carsten},
+	year = {2019},
+	month = {01},
+	date = {2019-01-16},
+	journal = {Science Advances},
+	pages = {eaat4858},
+	volume = {5},
+	number = {1},
+	doi = {10.1126/sciadv.aat4858},
+	url = {https://www.science.org/doi/full/10.1126/sciadv.aat4858},
+	note = {Publisher: American Association for the Advancement of Science}
+}
+
+@article{kass2023,
+	title = {wallace 2: a shiny app for modeling species niches and distributions redesigned to facilitate expansion via module contributions},
+	author = {Kass, Jamie M. and Pinilla-Buitrago, Gonzalo E. and Paz, Andrea and Johnson, Bethany A. and Grisales-Betancur, Valentina and Meenan, Sarah I. and Attali, Dean and Broennimann, Olivier and Galante, Peter J. and Maitner, Brian S. and Owens, Hannah L. and Varela, Sara and Aiello-Lammens, Matthew E. and Merow, Cory and Blair, Mary E. and Anderson, Robert P.},
+	year = {2023},
+	date = {2023},
+	journal = {Ecography},
+	pages = {e06547},
+	volume = {2023},
+	number = {3},
+	doi = {10.1111/ecog.06547},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.06547},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.06547},
+	langid = {en}
+}
+
+@article{zurell2020,
+	title = {A standard protocol for reporting species distribution models},
+	author = {Zurell, Damaris and Franklin, Janet and {König}, Christian and Bouchet, Phil J. and Dormann, Carsten F. and Elith, Jane and Fandos, Guillermo and Feng, Xiao and Guillera-Arroita, Gurutzeta and Guisan, Antoine and Lahoz-Monfort, {José J.} and {Leitão}, Pedro J. and Park, Daniel S. and Peterson, A. Townsend and Rapacciuolo, Giovanni and Schmatz, Dirk R. and {Schröder}, Boris and Serra-Diaz, Josep M. and Thuiller, Wilfried and Yates, Katherine L. and Zimmermann, Niklaus E. and Merow, Cory},
+	year = {2020},
+	date = {2020},
+	journal = {Ecography},
+	pages = {1261--1277},
+	volume = {43},
+	number = {9},
+	doi = {10.1111/ecog.04960},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ecog.04960},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.04960},
+	langid = {en}
+}
