--- a/organize.qmd
+++ b/organize.qmd
@@ -61,6 +61,11 @@
 
         -   Patrick Halpin
 
+    -   [Natura Connect](http://www.maraujolab.eu/inaugural-session-of-natura-connect-pt-think-thank/)\
+        *Think Tank within the Natura Connect to discuss the implementation of the European Biodiversity Strategy in Portugal*
+
+        -   Miguel Araujo\
+
     -   [PMEL](https://www.pmel.noaa.gov/)\
         *Pacific Marine Environmental Lab (NOAA)*\
         contacts:
