--- a/organize.qmd
+++ b/organize.qmd
@@ -62,6 +62,10 @@
 
         -   Patrick Halpin
 
+    -   [MPA-Europe](https://mpa-europe.eu/)
+
+        -   Mark Costello
+
     -   [Natura Connect](http://www.maraujolab.eu/inaugural-session-of-natura-connect-pt-think-thank/)\
         *Think Tank within the Natura Connect to discuss the implementation of the European Biodiversity Strategy in Portugal*
 
