env.qmd: + tbl of Roberts et al (2016) env predictors

--- a/env.qmd
+++ b/env.qmd
@@ -3,7 +3,26 @@ title: "Environment"
 subtitle: "Extract environmental predictors (static and/or dynamic) from various sources for observations (presence and pseudo-absence)"
 ---
 
-These data are also used at the prediction step.
+Environmental data are used to fit the model and predict distribution onto the seascape, e.g. @tbl-Roberts2016-env.
+
+```{r}
+#| label: tbl-Roberts2016-env
+#| tbl-cap: "Example of environmental predictors from Roberts et al. [-@roberts2016]."
+#| results: asis
+
+librarian::shelf(
+  here, knitr, readr)
+library(here)
+library(knitr)
+library(readr)
+
+d <- read_csv(
+  here("data/Roberts-2016_env-predictors.csv"),
+  show_col_types = F)
+
+options(knitr.kable.NA = '')
+kable(d, format="pipe")
+```
 
 ### Physiographic
 
