--- a/references.bib
+++ b/references.bib
@@ -337,3 +337,16 @@
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.04960},
 	langid = {en}
 }
+
+@article{roberts2016,
+	title = {Habitat-based cetacean density models for the U.S. Atlantic and Gulf of Mexico},
+	author = {Roberts, Jason J. and Best, Benjamin D. and Mannocci, Laura and Fujioka, Ei and Halpin, Patrick N. and Palka, Debra L. and Garrison, Lance P. and Mullin, Keith D. and Cole, Timothy V. N. and Khan, Christin B. and McLellan, William A. and Pabst, D. Ann and Lockhart, Gwen G.},
+	year = {2016},
+	month = {03},
+	date = {2016-03-03},
+	journal = {Scientific Reports},
+	pages = {22615},
+	volume = {6},
+	doi = {10.1038/srep22615},
+	url = {http://www.nature.com/articles/srep22615}
+}
