+ America the Beautiful reference

--- a/references.bib
+++ b/references.bib
@@ -350,3 +350,18 @@
 	doi = {10.1038/srep22615},
 	url = {http://www.nature.com/articles/srep22615}
 }
+
+@article{carroll2022,
+	title = {US conservation atlas needs biodiversity data},
+	author = {Carroll, C. and Noss, R. F. and Stein, Bruce A.},
+	year = {2022},
+	month = {04},
+	date = {2022-04-08},
+	journal = {Science},
+	pages = {144--145},
+	volume = {376},
+	number = {6589},
+	doi = {10.1126/science.abo0526},
+	url = {http://dx.doi.org/10.1126/science.abo0526},
+	langid = {en}
+}
