+ authors orcid; glossary cleanup

--- a/index.qmd
+++ b/index.qmd
@@ -4,18 +4,11 @@
 #| echo: false
 #| eval: false
 
-# in .Rprofile:
-if (!"glossary" %in% rownames(installed.packages()))
-  install.packages(
-    "glossary",
-    repos = c(
-      "https://debruine.r-universe.dev",
-      "https://cloud.r-project.org"))
-library(glossary)
-glossary::glossary_path("glossary/glossary.yml")
-glossary::glossary_popup("click")
-glossary::glossary_persistent("glossary/glossary-persistent.yml")
-# Terminal: quarto publish gh-pages
+# NOTE .Rprofile:
+#   source("renv/activate.R")
+#   source("glossary/glosssary.R")
+# Initialize for Github Action in Terminal:
+#   quarto publish gh-pages
 ```
 
 ## Background
