comment off organize.qmd

--- a/references.bib
+++ b/references.bib
@@ -365,3 +365,28 @@
 	url = {http://dx.doi.org/10.1126/science.abo0526},
 	langid = {en}
 }
+
+@article{fautin2010,
+	title = {An Overview of Marine Biodiversity in United States Waters},
+	author = {Fautin, Daphne and Dalton, Penelope and Incze, Lewis S. and Leong, Jo-Ann C. and Pautzke, Clarence and Rosenberg, Andrew and Sandifer, Paul and Sedberry, George and Tunnell, John W. and Abbott, Isabella and Brainard, Russell E. and Brodeur, Melissa and Eldredge, Lucius G. and Feldman, Michael and Moretzsohn, Fabio and Vroom, Peter S. and Wainstein, Michelle and Wolff, Nicholas},
+	year = {2010},
+	date = {2010},
+	journal = {PLoS ONE},
+	pages = {e11914},
+	volume = {5},
+	number = {8},
+	doi = {10.1371/journal.pone.0011914},
+	url = {UR  - http://dx.doi.org/10.1371/journal.pone.0011914,http://dx.doi.org/10.1371/journal.pone.0011914}
+}
+
+@article{muller-karger2018,
+	title = {Advancing Marine Biological Observations and Data Requirements of the Complementary Essential Ocean Variables (EOVs) and Essential Biodiversity Variables (EBVs) Frameworks},
+	author = {Muller-Karger, Frank E. and Miloslavich, Patricia and Bax, Nicholas J. and Simmons, Samantha and Costello, Mark J. and Sousa Pinto, Isabel and Canonico, Gabrielle and Turner, Woody and Gill, Michael and Montes, Enrique and Best, Benjamin D. and Pearlman, Jay and Halpin, Patrick and Dunn, Daniel and Benson, Abigail and Martin, Corinne S. and Weatherdon, Lauren V. and Appeltans, Ward and Provoost, Pieter and Klein, Eduardo and Kelble, Christopher R. and Miller, Robert J. and Chavez, Francisco P. and Iken, Katrin and Chiba, Sanae and Obura, David and Navarro, Laetitia M. and Pereira, Henrique M. and Allain, Valerie and Batten, Sonia and Benedetti-Checchi, Lisandro and Duffy, J. Emmett and Kudela, Raphael M. and Rebelo, Lisa-Maria and Shin, Yunne and Geller, Gary},
+	year = {2018},
+	date = {2018},
+	journal = {Frontiers in Marine Science},
+	volume = {5},
+	doi = {10.3389/fmars.2018.00211},
+	url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00211/full?utm_source=FRN&utm_medium=EMAIL_IRIS&utm_campaign=EMI_XIA_180630_Milestones_CoAuthor_article_page},
+	langid = {English}
+}
