+ AquaMaps Treemap exploration

--- a/explorations/obis-top-spp-by-class.qmd
+++ b/explorations/obis-top-spp-by-class.qmd
@@ -9,7 +9,7 @@ categories:
 editor: source   
 ---
 
-# OBIS Top Species by Class {.unnumbered}
+# OBIS Top Classes {.unnumbered}
 
 ```{r}
 #| echo: false
