--- a/explorations/am-fine.qmd
+++ b/explorations/am-fine.qmd
@@ -1,17 +1,16 @@
 ---
-description: "Select a Sanctuary or Draw a polygon to filter to 1/2º AquaMaps species and view as Table or treemap Plot for interactive taxonomic composition."
-image: "../figures/explorations/am-sanct.png"
-url: "https://shiny.marinebon.app/am-sanct/"
-url-code: "https://github.com/marinebon/aquamapsduckdb/tree/main/inst/app"
+description: "Downscale AquaMaps from 1/2º to GEBCO 1/240º using Google Earth Engine and Shiny."
+image: "../figures/explorations/aquamaps-downscaled.png"
+url: "https://shiny.marinebon.app/am-fine/"
+url-code: "https://github.com/marinebon/aquamaps-downscaled/tree/main/sp-map"
 categories: 
    - "data: AquaMaps"
-   - "tech: DuckDB"
-   - "tech: R"
+   - "tech: Google Earth Engine"
    - "tech: Shiny"
 editor: source   
 ---
 
-# AquaMaps Treemap {.unnumbered}
+# AquaMaps Downscaled {.unnumbered}
 
 ```{r}
 #| echo: false
@@ -31,5 +30,3 @@ url_code <- metadata[["url-code"]]
 -   [{{< fa brands github >}} `code`](`r url_code`)
 
 ![](`r img`)
-
-This app uses [`aquamapsdata`](https://raquamaps.github.io/aquamapsdata/articles/intro.html) after translating from `sqlite` (slow) and `raster` (deprecated) R functions to `duckdb` (fast) and `terra` (superceding) R functions. We can use these distributional data to calculate place-based indicators with anticipation of the distributional data getting improved upon in 2024 by AquaX and others.
