+ joint species distribution models (jSDMs; Hartig et al 2023, Box 2)

--- a/references.bib
+++ b/references.bib
@@ -390,3 +390,19 @@
 	url = {https://www.frontiersin.org/articles/10.3389/fmars.2018.00211/full?utm_source=FRN&utm_medium=EMAIL_IRIS&utm_campaign=EMI_XIA_180630_Milestones_CoAuthor_article_page},
 	langid = {English}
 }
+
+@article{hartig2023,
+	title = {Novel community data in ecology-properties and prospects},
+	author = {Hartig, Florian and Abrego, Nerea and Bush, Alex and Chase, Jonathan M. and Guillera-Arroita, Gurutzeta and Leibold, Mathew A. and Ovaskainen, Otso and Pellissier, {Loïc} and Pichler, Maximilian and Poggiato, Giovanni and Pollock, Laura and Si-Moussi, Sara and Thuiller, Wilfried and Viana, Duarte S. and Warton, David I. and Zurell, Damaris and Yu, Douglas W.},
+	year = {2023},
+	month = {11},
+	date = {2023-11-08},
+	journal = {Trends in Ecology & Evolution},
+	volume = {0},
+	number = {0},
+	doi = {10.1016/j.tree.2023.09.017},
+	url = {https://www.cell.com/trends/ecology-evolution/abstract/S0169-5347(23)00265-3},
+	note = {Publisher: Elsevier
+PMID: 37949795},
+	langid = {English}
+}
