--- a/combine.qmd
+++ b/combine.qmd
@@ -4,3 +4,5 @@ subtitle: "Combine SDMs from the same or multiple species"
 ---
 
 We look at combining SDMs to calculate biodiversity based on addressing questions of interest and relevance.
+
+-   See joint species distribution models (jSDMs) per Hartig et al [-@hartig2023, Box 2] that includes species co-occurrence.
